<resources>
    <string name="app_name">Math</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="clear">C</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="equally">=</string>
    <string name="plus">+</string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="cos">Cos</string>
    <string name="sin">Sin</string>
    <string name="trigonometry">trigonometry</string>
    <string name="tan">tan</string>
    <string name="cot">cot</string>
    <string name="D">DarkTheme</string>
    <string name="darkTheme">DarkTheme</string>
</resources>