<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="324dp"
        android:layout_height="362dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="-20dp"
        android:src="@drawable/ic_math"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <TextView
        android:id="@+id/textInput"
        android:layout_width="368dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="104dp"
        android:layout_height="20dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="0dp"
        android:text="@string/trigonometry"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/buttonEqually" />

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="368dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/textInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInput"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/textInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonC"
        style="@style/StyleButton1.orange"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/clear"
        app:layout_constraintStart_toEndOf="@+id/buttonEqually"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMinus"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="4dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiply"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:text="@string/multiply"
        app:layout_constraintStart_toEndOf="@+id/buttonPlus"
        app:layout_constraintTop_toTopOf="@+id/textInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEqually"
        style="@style/StyleButton1.orange"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="4dp"
        android:text="@string/equally"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlus"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/textInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDiv"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/div"
        app:layout_constraintStart_toEndOf="@+id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDot"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCos"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cos"
        android:textSize="7sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSin"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sin"
        android:textSize="7sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonCos"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTan"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="4dp"
        android:text="@string/tan"
        android:textSize="7sp"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/buttonSin"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCTan"
        style="@style/StyleButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/cot"
        android:textSize="7sp"
        app:layout_constraintStart_toEndOf="@+id/buttonTan"
        app:layout_constraintTop_toBottomOf="@+id/buttonCos"
        tools:ignore="SmallSp" />



    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="12dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/textInput"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/separator3"
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:background="@color/textAnswerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text"
        app:layout_constraintVertical_bias="0.96" />

    <View
        android:id="@+id/separator2"
        android:layout_width="104dp"
        android:layout_height="2dp"
        android:layout_marginStart="68dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEqually"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/darkTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>